--- a/index.html
+++ b/index.html
@@ -79,55 +79,17 @@
             <h1 class="readable-width text-center title">Bust IT: Cancer Without Borders</h1>
 
             <section id="about-us" class="section-margin">
-                    <h2 id="about-us-title" class="title">About Us</h2>
-                    <article class="text-center">
-                        <p class="article-content">Bust IT: Cancer Without Borders is an organisation who are bringing awareness to the transgender community about breast cancer. </p>
-                        <p class="article-content">We aim to educate people on their risk factor for breast cancer and signpost to additional support and resources they may find useful.</p>
-                        <p class="article-content">Education is our main priority – we want everyone, regardless of gender to feel capable of performing a breast/chest check every month and to know the early warning signs of breast cancer.</p>
-                        <p class="article-content">We like to utilise the massive advances technology has made over the last few years allowing people to visualise the human form in a way that was previously impossible – this is perfect for people who are visual learners.</p>
-                        <p class="article-content">We provide an email reminder service to encourage people to check their breasts/chest every month – a key factor to spotting the early signs of breast cancer. </p>
+                <h2 id="about-us-title" class="title">About Us</h2>
+                <article class="text-center">
+                    <p class="article-content">Bust IT: Cancer Without Borders is an organisation who are bringing awareness to the transgender community about breast cancer. </p>
+                    <p class="article-content">We aim to educate people on their risk factor for breast cancer and signpost to additional support and resources they may find useful.</p>
+                    <p class="article-content">Education is our main priority – we want everyone, regardless of gender to feel capable of performing a breast/chest check every month and to know the early warning signs of breast cancer.</p>
+                    <p class="article-content">We like to utilise the massive advances technology has made over the last few years allowing people to visualise the human form in a way that was previously impossible – this is perfect for people who are visual learners.</p>
+                    <p class="article-content">We provide an email reminder service to encourage people to check their breasts/chest every month – a key factor to spotting the early signs of breast cancer. </p>
                 </article>
+                <img src="/assets/images/group-of-people.jpg" alt="Stylised llustration of a group of people of various genders">
             </section>
 
-            <section id="awareness" class="section-margin">
-                <h2 id="awareness-title">Awareness</h2>
-
-                <model-viewer
-                    id="female-model-viewer"
-                    auto-rotate
-                    loading="eager"
-                    field-of-view="30deg"
-                    environment-image="assets/models/moonless_golf_2k.hdr"
-                    alt="A 3D model of a female body's torso"
-                    src="assets/models/fem-torso-transLights.glb">
-                </model-viewer>
-                
-                <article id="awareness-content-1">
-                    <p class="article-content">
-                        Breast cancer is when cells in your breast change and grow in an
-                        abnormal way, and sometimes can create tumours. In Ireland alone, roughly 3,600 women and 40 men are diagnosed with it each year. 
-                    </p>
-                    <p class="article-content">
-                        But what about Transgender people? Transgender people undergo lengthy processes to become who they want to be, and although rates of Breast cancer in Transgender people are lower than the general Cisgender population, they are still at risk.
-                    </p>
-                </article>
-                
-                <article id="awareness-content-2">
-                    <p class="article-content">
-                        Research done in the past few years has identified that Transgender
-                        people who undergo hormone treatment have an increased risk of
-                        Breast cancer.
-                    </p>
-                    <p class="article-content">
-                        These studies found that Transgender Women were around 47 times more
-                        likely to develop Breast cancer than Cisgender Men.
-                    </p>
-                    <p class="article-content">
-                        These studies also demonstrated that Transgender Men had a far
-                        reduced risk of Breast cancer than Cisgender Women, although it
-                        is still not completely understood why.
-                    </p>
-                </article>
             <section id="awareness-section" class="section-margin">
                 <article id="awareness" >
                     <h2 id="awareness-title" class="section-title">Awareness</h2>
